# vibe-kanban

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CODE-OF-CONDUCT.md  Cargo.toml  Dockerfile  README.md  STYLE_OVERRIDE.md  build-npm-package.sh  check-both.sh  db.sqlite  local-build.sh  package-lock.json  package.json  pnpm-lock.yaml  prepare_db.sh  rust-toolchain.toml  test-npm-package.sh  test_config.json  test_diff_logic.py
backend/: .env.example  Cargo.toml  build.rs  db.sqlite
backend/.sqlx/: query-00aa2d8701f6b1ed2e84ad00b9b6aaf8d3cce788d2494ff283e2fad71df0a05d.json  query-0133ba2ace195776eaa714981cdf492d2eaa3dc97dc3379b549a3c4fb8309975.json  query-01b7e2bac1261d8be3d03c03df3e5220590da6c31c77f161074fc62752d63881.json  query-022ee13a4082ece0cec1100f5c8c4dc5ecbf84018e1c6b735891ec4057e99f72.json  query-0291d620d1e6c461b135c62e08621c41c22130a86d8664701bc390bc72fb4d4b.json  query-03f2b02ba6dc5ea2b3cf6b1004caea0ad6bcc10ebd63f441d321a389f026e263.json  query-045124ed7dd9765b61eba67f15555f33fa86d0dabebc9cd845f06c2c28ec16d7.json  query-0468aa522ed7fd2675bcf278f6be38ce16752cb73adf0fafc5b497a88f32f531.json  query-056991f6ec992103f9de72475138ddfa8d5c9d42546fe36116a61f4db94611c3.json  query-06ca282915d0db9125769b1bca92f7a5bd7f81ad8faf0f9fcbb5f1c2d35dd67f.json  query-08f2cb03665a16640d6690f29920521bae3479e3d2602e724d2c93e6fc85d8ee.json  query-0ac126dc834dc72fd7cbf4cc32ab23fec591cd48114905fadc59d15c38c9718c.json  query-0b55273631c697e19f622a14d9f7c81c7c669744f3c586397f8d08eb924cae73.json  query-0b5beec7f93c798c0de7089cb119438461d303e06dcea6db8facec1280362ef4.json  query-0bdcd1ef7dad9ce28357ca36ab38cde77bb3e3c8cae51da14eefd08de76e96c1.json  query-0cb9073512165a38ad21dc1fdb88548b8e8e0a369eb18228287a19ada5ee402c.json  query-0f4fe7bda55a0c8771d8ff102d689391a9d0505f85fb92a3b5d46239b8b5d60b.json  query-0f797f257a16320fc6b5b7bb0ad6a859b85395d3cd1872c0ca071c81ade6e3fe.json  query-0fc0dec5876cbe904d288a8e3bef15e0b7f75eb8e3c0fc1aeccd533ae73aab05.json  query-1268afe9ca849daa6722e3df7ca8e9e61f0d37052e782bb5452ab8e1018d9b63.json  query-14ad9267623a3aa678a943db6d0b14581a6d353da673c9e4156e0bbeac0b3346.json  query-18bfb3eb9408e5268bccf7a17fe02424df8ae3130b70aaad64c5342c198011c9.json  query-1ada5613889792cd6098da71ce2ba1ecdee7e5dc2ff8196872368fff0caa48d8.json  query-1b24e3eeb2782cdb4e5b98a1b82eeba8eb9b51a5b09dde436da6800d29277b1c.json  query-1be393764ab52d9fc12a786783a088c89bf61b1aa97505d91a9a94fede58bb46.json  query-1c7b06ba1e112abf6b945a2ff08a0b40ec23f3738c2e7399f067b558cf8d490e.json  query-1dabc7e92286b7ae53f9a98063d7fff4d96652e204dac4de4b46d29dfb198e40.json  query-1f3dd0f80e984a8472457be40cd96e1a03de71cc6c8adc62ef4873b79449f078.json  query-1f619f01f46859a64ded531dd0ef61abacfe62e758abe7030a6aa745140b95ca.json  query-1fbd0dbbc876ac609d7fe7462a816fe3ab68b1d8711b4099daae54530d1703b1.json  query-1fca1ce14b4b20205364cd1f1f45ebe1d2e30cd745e59e189d56487b5639dfbb.json  query-205da45211b3aa413684ecd76d065fc59f793da42da075246464ac776016f5ff.json  query-212828320e8d871ab9d83705a040b23bcf0393dc7252177fc539a74657f578ef.json  query-216efabcdaa2a6ea166e4468a6ac66d3298666a546e964a509538731ece90c9e.json  query-2188432c66e9010684b6bb670d19abd77695b05d1dd84ef3102930bc0fe6404f.json  query-219898a7ca7dcdeceb9f248d95f0e4afe8128df16f57c3b91334ac4ce80b6e5a.json  query-2658c9a9ac96f7364811d12854256068971bd33f12f8654445969f84a204a5fa.json  query-290ce5c152be8d36e58ff42570f9157beb07ab9e77a03ec6fc30b4f56f9b8f6b.json  query-2b199ed09a8fa6e04e948afbab2400ffe768abc754434331108edfdf54a9fca7.json  query-2b1e71e53fbf99fef22324cda3c9c6d5c470dee4d117521362d68678f655863d.json  (+156 more)
backend/migrations/: 001_initial.sql  002_update_users_auth.sql  003_add_inreview_status.sql  004_add_git_repo_path.sql  005_unique_git_repo_path.sql  006_create_task_attempts.sql  007_add_executor_config.sql  008_add_stdout_stderr_to_task_attempts.sql  009_change_executor_config_to_executor.sql  010_remove_users_table.sql  20250617183714_init.sql  20250618201518_add_setup_script_to_projects.sql  20250620212427_execution_processes.sql  20250621120000_relate_activities_to_execution_processes.sql  20250623130000_add_executor_type_to_execution_processes.sql  20250625000000_add_dev_script_to_projects.sql  20250701000001_add_pr_tracking_to_task_attempts.sql  20250701120000_add_assistant_message_to_executor_sessions.sql  20250709000000_add_worktree_deleted_flag.sql  20250710000000_add_setup_completion.sql  20250716161432_update_executor_names_to_kebab_case.sql  20250717000000_drop_task_attempt_activities.sql  20250719000000_add_cleanup_script_to_projects.sql  20250720000000_add_cleanupscript_to_process_type_constraint.sql
backend/scripts/: toast-notification.ps1
backend/src/: app_state.rs  auth.rs  command_runner.rs  execution_monitor.rs  executor.rs  executor_tests.rs  lib.rs  main.rs  utils.rs
backend/src/command_runner/: local.rs  remote.rs
backend/src/executors/: aider.rs  amp.rs  ccr.rs  charm_opencode.rs  claude.rs  cleanup_script.rs  codex.rs  dev_server.rs  echo.rs  gemini.rs  mod.rs  opencode.rs  setup_script.rs  sst_opencode.rs
backend/src/mcp/: mod.rs  task_server.rs
backend/src/middleware/: model_loaders.rs
backend/src/models/: api_response.rs  config.rs  execution_process.rs  executor_session.rs  mod.rs  project.rs  task.rs  task_attempt.rs  task_attempt_activity.rs  task_template.rs  test_diff.rs  user.rs
backend/src/routes/: auth.rs  config.rs  filesystem.rs  github.rs  health.rs  mod.rs  projects.rs  stream.rs  task_attempts.rs  task_templates.rs  tasks.rs  users.rs
backend/src/services/: analytics.rs  git_service.rs  github_service.rs  mod.rs  notification_service.rs  pr_monitor.rs  process_service.rs
backend/src/utils/: path.rs  shell.rs  worktree_manager.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-003a304a303ff4e55405edab31fe1d3a7b70eb75047fbf7b750a5f72c2401dec.json  (+100 more)
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_profiles.json
crates/local-deployment/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/services/: Cargo.toml
crates/utils/: Cargo.toml
(+397 files in other folders)
