[package]
name = "deployment"
version = "0.0.66"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
services = { path = "../services" }
executors = { path = "../executors" }
async-trait = "0.1"
thiserror = { workspace = true } 
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
tracing = { workspace = true }
git2 = "^0.18.1"
futures = "0.3.31"
axum = { workspace = true }

